--- a/Index.html
+++ b/Index.html
@@ -8,11 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="logo"><h3>Medi <span class="logo-dot">.</span></h3>
+    <header class="logo"><h3>Medi<span class="logo-dot">.</span></h3>
     </header>
-    <main><section><h1></h1>
-        <p></p>
-        <button></button>
+    <main><section><h1>Stay Productive & Work Remotely</h1>
+        <p>The key to work-from-home success is to create an enviroment that allows you to focus on the tasks at hand. Whether you are working from home for the first time.</p>
+        <button>Learn More</button>
 
     </section>
     <section>
