--- a/Index.html
+++ b/Index.html
@@ -10,9 +10,9 @@
 <body>
     <header class="logo"><h3>Medi<span class="logo-dot">.</span></h3>
     </header>
-    <main><section><h1>Stay Productive & Work Remotely</h1>
-        <p>The key to work-from-home success is to create an enviroment that allows you to focus on the tasks at hand. Whether you are working from home for the first time.</p>
-        <button>Learn More</button>
+    <main><section><h1 class="main-title">Stay Productive & Work Remotely</h1>
+        <p class="main-info">The key to work-from-home success is to create an enviroment that allows you to focus on the tasks at hand. Whether you are working from home for the first time.</p>
+        <button class="main-btn">Learn More</button>
 
     </section>
     <section>
