--- a/Index.html
+++ b/Index.html
@@ -11,13 +11,14 @@
 <body>
     <header class="logo"><h3>Medi<span class="logo-dot">.</span></h3>
     </header>
-    <main><section><h1 class="main-title">Stay Productive & Work Remotely</h1>
+    <main><section><h1 class="main-title">Stay Productive and 
+        Work Remotely</h1>
         <p class="main-info">The key to work-from-home success is to create an enviroment that allows you to focus on the tasks at hand. Whether you are working from home for the first time.</p>
         <button class="main-btn">Learn More</button>
 
     </section>
     <section>
-        <img src="" alt="">
+        <img src="Images/yoga.png" alt="Images">
 
     </section>
     </main>   
