--- a/Index.html
+++ b/Index.html
@@ -1,26 +1,31 @@
-<!DOCTYPE html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
+ <!DOCTYPE html>
+
+ <html lang="en">
+
+ <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link hrel="stylesheet" href="Index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
+    <link hrel="stylesheet" href="styles/Index.css">
     <title>Document</title>
-</head>
-<body>
+ </head>
+
+ <body>
     <header class="logo"><h3>Medi<span class="logo-dot">.</span></h3>
     </header>
-    <main><section><h1 class="main-title">Stay Productive and 
+    <main><section><h1 class="main-title">Stay Productive &
+    
         Work Remotely</h1>
         <p class="main-info">The key to work-from-home success is to create an enviroment that allows you to focus on the tasks at hand. Whether you are working from home for the first time.</p>
         <button class="main-btn">Learn More</button>
 
     </section>
     <section>
-        <img src="Images/yoga.png" alt="Images">
+        <img src="Images/yoga.png" alt="woman doing yoga">
 
     </section>
-    </main>   
-</body>
-</html>
+    </main> 
+
+ </body>
+
+ </html>
