Trying to fix code

--- a/Index.html
+++ b/Index.html
@@ -5,17 +5,18 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
     <link hrel="stylesheet" href="styles/Index.css">
     <title>Document</title>
  </head>
 
  <body>
-    <header class="logo"><h3>Medi<span class="logo-dot">.</span></h3>
+    <header> 
+        <h3 class="logo">Medi<span class="logo-dot">.</span></h3>
     </header>
-    <main><section><h1 class="main-title">Stay Productive &
-    
-        Work Remotely</h1>
+    <main>
+        <section>
+            <h1 class="main-title">Stay Productive &
+            Work Remotely</h1>
         <p class="main-info">The key to work-from-home success is to create an enviroment that allows you to focus on the tasks at hand. Whether you are working from home for the first time.</p>
         <button class="main-btn">Learn More</button>
 
