--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link hrel="stylesheet" href="styles/Index.css">
+    <link hrel="stylesheet" href="Styles/Index.css">
     <title>Document</title>
  </head>
 
