--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=font-family: 'Montserrat', sans-serif;font-family: 'Ramaraja', serif;font-family: 'Roboto', sans-serif;">
     <link hrel="stylesheet" href="Styles/Index.css">
     <title>Document</title>
  </head>
