--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles/Index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=font-family: 'Montserrat', sans-serif;font-family: 'Ramaraja', serif;font-family: 'Roboto', sans-serif;">
     <title>Document</title>
  </head>
 
